# socketcan-study

./: Makefile.am  bootstrap.sh  configure.ac
socket_can/: Makefile.am  socket_can.c
